Vault Intermediate Issuer (#5)
* Vault Intermediate Issuer

* Vault Intermediate Issuer

* PEM to P12

* Vault Register for reflection

* Register Providers

* Switched JVM

* Remove PEM to PKCS12 transformation. Switch back to native

* cleanup

* update commons

Co-authored-by: Andrea Battaglia <andreabattaglia@users.noreply.github.com>