@@ -21,7 +21,7 @@ import io.qiot.ubi.all.registration.domain.CAIssuerRequest;
 import io.qiot.ubi.all.registration.exception.IssuerProvisionException;
 import io.qiot.ubi.all.registration.service.IssuerService;
 
-/** 
+/**
  * @author mmascia
  */
 @ApplicationScoped
@@ -29,13 +29,14 @@ import io.qiot.ubi.all.registration.service.IssuerService;
 public class CertManagerIssuerService implements IssuerService {
 
     private static final String CA_SECRET = "-secret";
-    public static final String REGISTRATION_QIOT_IO_NAME = "registration.qiot.io/name"; 
+    public static final String REGISTRATION_QIOT_IO_NAME = "registration.qiot.io/name";
     final IssuerOperation issuerOperation;
     final SecretOperation secretOperation;
     final String issuerName;
     final Logger LOGGER;
 
-    public CertManagerIssuerService(IssuerOperation issuerOperation, SecretOperation secretOperation, Logger log,
+    public CertManagerIssuerService(IssuerOperation issuerOperation,
+            SecretOperation secretOperation, Logger log,
             @ConfigProperty(name = "qiot.cert-manager.intermediate.issuer") String issuerName) {
 
         this.LOGGER = log;
@@ -45,32 +46,36 @@ public class CertManagerIssuerService implements IssuerService {
     }
 
     @Override
-    public void provision(CAIssuerRequest issuerRequest) throws IssuerProvisionException {
+    public void provision(CAIssuerRequest issuerRequest)
+            throws IssuerProvisionException {
 
         final String secretName = this.issuerName + CA_SECRET;
         this.createCASecret(issuerRequest, secretName);
 
-        final CAIssuer caIssuer = new CAIssuerBuilder().withSecretName(secretName).build();
-        final Issuer issuer = new IssuerBuilder()
-                                 .withNewMetadata().withName(this.issuerName)
-                                    .withLabels(Collections.singletonMap(REGISTRATION_QIOT_IO_NAME, this.issuerName))
-                                .endMetadata()
-                                .withNewSpec().withCa(caIssuer).endSpec().build();
+        final CAIssuer caIssuer = new CAIssuerBuilder()
+                .withSecretName(secretName).build();
+        final Issuer issuer = new IssuerBuilder().withNewMetadata()
+                .withName(this.issuerName)
+                .withLabels(Collections.singletonMap(REGISTRATION_QIOT_IO_NAME,
+                        this.issuerName))
+                .endMetadata().withNewSpec().withCa(caIssuer).endSpec().build();
 
         LOGGER.debug("Call issuerOperation: {}", issuer);
         this.issuerOperation.operation().createOrReplace(issuer);
     }
 
+    private void createCASecret(CAIssuerRequest issuerRequest,
+            String secretName) throws IssuerProvisionException {
 
-    private void createCASecret(CAIssuerRequest issuerRequest, String secretName) throws IssuerProvisionException {
-        
-        Secret secret =  new SecretBuilder()
-                            .withNewMetadata().withName(secretName)
-                                .withLabels(Collections.singletonMap(REGISTRATION_QIOT_IO_NAME, this.issuerName))
-                            .endMetadata()
-                            .withData(Map.of(CAIssuerRequest.TLS_KEY, issuerRequest.tlsKey, CAIssuerRequest.TLS_CERT, issuerRequest.tlsCert))
-                        .build();
-        
+        Secret secret = new SecretBuilder().withNewMetadata()
+                .withName(secretName)
+                .withLabels(Collections.singletonMap(REGISTRATION_QIOT_IO_NAME,
+                        this.issuerName))
+                .endMetadata()
+                .withData(Map.of(CAIssuerRequest.TLS_KEY, issuerRequest.tlsKey,
+                        CAIssuerRequest.TLS_CERT, issuerRequest.tlsCert))
+                .build();
+
         LOGGER.debug("Call secretOperation: {}", secret);
         this.secretOperation.operation().createOrReplace(secret);
     }
